# message-producer-scrapy-pipeline

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
wired/: scrapy.cfg
wired/wired/: items.py  middlewares.py  pipelines.py  settings.py
wired/wired/spiders/: wired_spider.py
