[tool.poetry]
name = "scrapy-rabbitmq-producer"
version = "0.1.0"
description = "A RabbitMQ Producer for Scrapy Pipelines"
authors = ["neto ferraz <netoferraz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Scrapy = "^2.5.0"
pika = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
